manifest/app-teste-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
  namespace: app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: test-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
